<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/tvSearchTitle"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSearchTitle"
        android:layout_width="49dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/tvSearchTitle"
        app:layout_constraintStart_toEndOf="@+id/tvSearchTitle"
        app:layout_constraintTop_toTopOf="@+id/tvSearchTitle"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSearchTitle"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>