...
                    android:layout_marginTop="15dp"
                    android:text="Comments"
                    app:layout_constraintEnd_toEndOf="@+id/tvBody"
                    app:layout_constraintTop_toBottomOf="@+id/tvBody" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:hint="@string/title"
...
